[package]
name = "trade-streamer"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
dotenvy = "0.15.7"
anyhow = "1.0.96"
backoff = { version = "0.4.0", features = ["tokio"] }
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = "0.4.39"
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.24"
hex = "0.4.3"
log = "0.4.17"
maplit = "1.0.2"
serde_json = "1.0.135"
serde = { version = "1.0.218", features = ["derive"] }
serde_derive = "1.0.218"
solana-sdk = "2.1.7"
solana-transaction-status = "2.1.7"
openssl = { version = "0.10", features = ["vendored"] }
tonic = "0.12.1"
yellowstone-grpc-client = "4.0.0"
yellowstone-grpc-proto = { version = "4.0.0", default-features = false ,features = ["plugin"] }
yellowstone-vixen-core = { git = "https://github.com/rpcpool/yellowstone-vixen" }
yellowstone-vixen-parser = { git = "https://github.com/rpcpool/yellowstone-vixen", features = ["raydium"] }
indicatif = "0.17.9"
config = "0.15.8"

[dev-dependencies]
sqlx-cli = { version = "0.8.3", features = ["postgres"] }